# django-fsspec

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_zh.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  large-benchmark.yml
benchmarks/: e2e_test.py  poc_transaction.py  run.py  settings.py
demo/: manage.py  settings.py
django_fsspec/: __init__.py  _django.py  _version.py  admin.py  apps.py  buffer.py  checks.py  exceptions.py  fs.py  migrations_ops.py  models.py  operations.py  validators.py
django_fsspec/management/commands/: fsspec_fsck.py  fsspec_gc.py  fsspec_migrate.py  fsspec_namespace.py  fsspec_rechunk.py  fsspec_repair.py  fsspec_stats.py
django_fsspec/migrations/: 0001_initial.py  0002_rechunk_test.py  0002_remove_filenode_django_fssp_namespa_361d8a_idx.py
django_fsspec/tests/: test_checks.py  test_commands.py  test_fs.py  test_migration.py  test_migrations_ops.py  test_models.py  test_operations.py  test_validators.py  test_webdav.py
django_fsspec/webdav/: auth.py  permissions.py  responses.py  urls.py  utils.py  views.py
docs/en/: architecture.md  benchmarks.md  block-size.md  configuration.md  exceptions.md  getting-started.md  local-cache.md  management-commands.md  migration-guide.md  operations-runbook.md  release-checklist.md  roadmap.md  usage.md
docs/zh/: architecture.md  benchmarks.md  block-size.md  configuration.md  exceptions.md  getting-started.md  local-cache.md  management-commands.md  migration-guide.md  operations-runbook.md  release-checklist.md  roadmap.md  usage.md
specs/data-integrity-hardening/: design.md  requirements.md  tasks.md
tests/: settings.py  test_admin.py  test_benchmarks.py  test_checks.py  test_commands.py  test_fs.py  test_fsspec_local_cache.py  test_integrity_adversarial.py  test_lazy_loading.py  test_migrate.py  test_migration.py  test_models.py  test_operations.py  test_operations_streaming.py  test_webdav.py  test_webdav_streaming.py  urls.py
