[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-fsspec"
version = "0.1.0"
description = "A Django app that provides a file system interface via fsspec, backed by Django ORM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "django>=3.2",
    "fsspec",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "pytest-cov",
]

[project.entry-points."fsspec.specs"]
django = "django_fsspec.fs:DjangoFileSystem"

[tool.hatch.build.targets.wheel]
packages = ["django_fsspec"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]

[tool.coverage.run]
source = ["django_fsspec"]
omit = ["django_fsspec/tests/*", "django_fsspec/migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 95
