[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "django-fsspec"
dynamic = ["version"]
description = "A Django app that provides a file system interface via fsspec, backed by Django ORM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "django>=3.2",
    "fsspec",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "pytest-cov",
]

[project.entry-points."fsspec.specs"]
django = "django_fsspec.fs:DjangoFileSystem"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.build.hooks.vcs]
version-file = "django_fsspec/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["django_fsspec"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]

[tool.coverage.run]
source = ["django_fsspec"]
omit = ["django_fsspec/tests/*", "django_fsspec/migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 95
