[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "django-fsspec"
dynamic = ["version"]
description = "A Django app that provides a file system interface via fsspec, backed by Django ORM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["django", "fsspec", "filesystem", "orm", "storage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: System :: Filesystems",
]
dependencies = [
    "django>=3.2",
    "fsspec",
]

[project.urls]
Homepage = "https://github.com/MrLYC/django-fsspec"
Repository = "https://github.com/MrLYC/django-fsspec"
Documentation = "https://github.com/MrLYC/django-fsspec/tree/main/docs/en"
Changelog = "https://github.com/MrLYC/django-fsspec/blob/main/CHANGELOG.md"
Issues = "https://github.com/MrLYC/django-fsspec/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "django-test-migrations",
]

[project.entry-points."fsspec.specs"]
django = "django_fsspec.fs:DjangoFileSystem"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.build.hooks.vcs]
version-file = "django_fsspec/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["django_fsspec"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]

[tool.coverage.run]
source = ["django_fsspec"]
omit = ["django_fsspec/tests/*", "django_fsspec/migrations/*", "django_fsspec/_version.py"]

[tool.coverage.report]
show_missing = true
fail_under = 95
